# django-hearthstone

./: .travis.yml  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
django_hearthstone/: __init__.py
django_hearthstone/cards/: admin.py  models.py
django_hearthstone/cards/management/commands/: load_cards.py
django_hearthstone/cards/migrations/: 0001_initial.py  0002_auto_20180321_1313.py  0003_auto_20180412_1348.py  0003_auto_20190701_1420.py  0004_add_multi_class_group.py  0004_auto_20190701_1420.py  0005_explicit_primary_keys.py  0006_card_multiple_classes.py  0007_card_fabled_card_is_fabled_bundle_card.py
django_hearthstone/scenarios/: admin.py  models.py
django_hearthstone/scenarios/management/commands/: load_dbf.py
django_hearthstone/scenarios/migrations/: 0001_initial.py  0002_explicit_primary_keys.py
tests/: settings.py  test_cards.py
