[metadata]
name = django-hearthstone
version = 1.3.1
description = Hearthstone file models for Django
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://github.com/HearthSim/django-hearthstone/
download_url = https://github.com/HearthSim/django-hearthstone/tarball/master
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
	Topic :: Games/Entertainment
	Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
	Django >= 3.2
	django-intenumfield >= 1.3
	hearthstone

[options.packages.find]
exclude =
	tests
